added: router added: home page with only header added: nav link login/register

--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -1,9 +1,10 @@
 :root{
     // font-clrs
-    --prm-clr:hsl(0, 0%, 10%);
+    --prm-clr:hsl(10, 90%, 10%);
 
 
 
     // bg-clrs
-    --body-bg:hsl(0, 0%, 97%);
+    --body-bg:hsl(14, 90%, 99%);
+    // color:hsl(14, 92%, 51%);
 }
