--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --prm-clr:hsl(0, 0%, 10%);
-  --body-bg:hsl(0, 0%, 97%);
+  --prm-clr:hsl(10, 90%, 10%);
+  --body-bg:hsl(14, 90%, 99%);
 }
 
 * {
@@ -8,4 +8,17 @@
   margin: 0;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--prm-clr);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background: var(--body-bg);
+}
+
+header, main {
+  padding: 0 clamp(1rem, 3rem, 3vw);
 }/*# sourceMappingURL=styles.css.map */
