--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -6,4 +6,17 @@
     margin:0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:var(--prm-clr);
+}
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    background:var(--body-bg);
+}
+
+header,main{
+    padding:0 clamp(1rem, 3rem, 3vw);
 }
