--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -19,6 +19,6 @@ body {
   background: var(--body-bg);
 }
 
-header, main {
+header {
   padding: 0 clamp(1rem, 3rem, 3vw);
 }/*# sourceMappingURL=styles.css.map */
