--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -1,10 +1,12 @@
 :root{
     // font-clrs
     --prm-clr:hsl(10, 90%, 10%);
+    --secondary-clr:hsl(9, 89%, 31%);
 
 
 
     // bg-clrs
     --body-bg:hsl(14, 90%, 99%);
+    --input-bg:hsl(14, 90%, 99%);
     // color:hsl(14, 92%, 51%);
 }
