added: making note section responsive

--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -6,7 +6,8 @@
 
 
     // bg-clrs
-    --body-bg:hsl(14, 90%, 99%);
+    --body-bg:hsl(0, 0%, 93%);
     --input-bg:hsl(14, 90%, 99%);
+    --form-bg:white;
     // color:hsl(14, 92%, 51%);
 }
