--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,9 +1,14 @@
 :root {
   --prm-clr:hsl(10, 90%, 10%);
-  --secondary-clr:hsl(9, 89%, 31%);
-  --body-bg:hsl(0, 0%, 93%);
-  --input-bg:hsl(14, 90%, 99%);
+  --secondary-clr:hsl(9, 89%, 50%);
+  --border:1px solid hsl(0, 0%, 75%);
+  --btn-clr:white;
+  --body-bg:hsl(0, 0%, 97%);
+  --input-bg:hsl(14, 90%, 100%);
   --form-bg:white;
+  --focused:hsl(10, 90%, 90%);
+  --btn-hover-bg:hsl(120, 100%, 20%);
+  --width:35rem;
 }
 
 * {
