added: some styles to the user nots

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3,6 +3,7 @@
   --secondary-clr:hsl(9, 89%, 50%);
   --border:1px solid hsl(0, 0%, 75%);
   --btn-clr:white;
+  --note-title-border:1px solid hsl(10, 90%, 90%);
   --body-bg:hsl(0, 0%, 97%);
   --input-bg:hsl(14, 90%, 100%);
   --form-bg:white;
