--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -4,6 +4,7 @@
     --secondary-clr:hsl(9, 89%, 50%);
     --border:1px solid hsl(0, 0%, 75%);
     --btn-clr:white;
+    --note-title-border:1px solid hsl(10, 90%, 90%);
 
 
 
