--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -14,6 +14,7 @@
     --form-bg:white;
     --focused:hsl(10, 90%, 90%);
     --btn-hover-bg:hsl(120, 100%, 20%);
+    --edit-modal-bg:rgba(0,0,0, 0.5);
     // color:hsl(14, 92%, 51%);
 
 
