--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -15,6 +15,9 @@
     --focused:hsl(10, 90%, 90%);
     --btn-hover-bg:hsl(120, 100%, 20%);
     --edit-modal-bg:rgba(0,0,0, 0.5);
+    --modal-bg:white;
+    --save-btn-bg:hsl(120, 100%, 20%);
+    --delete-btn-bg:red;
     // color:hsl(14, 92%, 51%);
 
 
