--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -10,6 +10,7 @@
 
     // bg-clrs
     --body-bg:hsl(0, 0%, 97%);
+    --header-bg:hsl(0, 0%, 100%);
     --input-bg:hsl(14, 90%, 100%);
     --form-bg:white;
     --focused:hsl(10, 90%, 90%);
@@ -18,8 +19,43 @@
     --modal-bg:white;
     --save-btn-bg:hsl(120, 100%, 20%);
     --delete-btn-bg:red;
-    // color:hsl(14, 92%, 51%);
 
 
+    // vars
     --width:35rem;
+}
+
+.dark-theme{
+    // font-clrs
+    --prm-clr:hsl(10, 90%, 95%);
+    --secondary-clr:hsl(9, 89%, 50%);
+    --border:1px solid hsl(0, 0%, 30%);
+    --btn-clr:white;
+    --note-title-border:1px solid hsl(10, 90%, 30%);
+
+
+
+    // bg-clrs
+    --body-bg:hsl(0, 0%, 6%);
+    --header-bg:hsl(0, 0%, 10%);
+    --input-bg:hsl(14, 90%, 10%);
+    --form-bg:hsl(0, 0%, 10%);
+    --focused:hsl(10, 90%, 90%);
+    --btn-hover-bg:hsl(120, 100%, 20%);
+    --edit-modal-bg:rgba(0,0,0, 0.5);
+    --modal-bg:white;
+    --save-btn-bg:hsl(120, 100%, 20%);
+    --delete-btn-bg:red;
+
+
+    // vars
+    --width:35rem;
+
+
+    .invert{
+        filter:invert(0.9);
+    }
+    .invert-3{
+        filter:invert(0.3);
+    }
 }
