--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -5,6 +5,7 @@
   --btn-clr:white;
   --note-title-border:1px solid hsl(10, 90%, 90%);
   --body-bg:hsl(0, 0%, 97%);
+  --header-bg:hsl(0, 0%, 100%);
   --input-bg:hsl(14, 90%, 100%);
   --form-bg:white;
   --focused:hsl(10, 90%, 90%);
@@ -16,11 +17,41 @@
   --width:35rem;
 }
 
+.dark-theme {
+  --prm-clr:hsl(10, 90%, 95%);
+  --secondary-clr:hsl(9, 89%, 50%);
+  --border:1px solid hsl(0, 0%, 30%);
+  --btn-clr:white;
+  --note-title-border:1px solid hsl(10, 90%, 30%);
+  --body-bg:hsl(0, 0%, 6%);
+  --header-bg:hsl(0, 0%, 10%);
+  --input-bg:hsl(14, 90%, 10%);
+  --form-bg:hsl(0, 0%, 10%);
+  --focused:hsl(10, 90%, 90%);
+  --btn-hover-bg:hsl(120, 100%, 20%);
+  --edit-modal-bg:rgba(0,0,0, 0.5);
+  --modal-bg:white;
+  --save-btn-bg:hsl(120, 100%, 20%);
+  --delete-btn-bg:red;
+  --width:35rem;
+}
+
+.dark-theme .invert {
+  -webkit-filter: invert(0.9);
+          filter: invert(0.9);
+}
+
+.dark-theme .invert-3 {
+  -webkit-filter: invert(0.3);
+          filter: invert(0.3);
+}
+
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--prm-clr);
 }
 
@@ -35,31 +66,46 @@ body {
 .edit_mode {
   position: relative;
 }
+
 .edit_mode .edit_modal {
   top: 50% !important;
   left: 50% !important;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background: var(--modal-bg);
   width: 90% !important;
   height: 80% !important;
   max-width: 50rem;
   max-height: 50rem;
 }
+
 .edit_mode .edit_modal textarea {
   height: 80%;
 }
+
 .edit_mode .edit_modal span {
   position: absolute;
   background: rgba(2, 61, 95, 0.3);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   border-radius: 50%;
   pointer-events: none;
   -webkit-animation: animate_ripple 0.5s linear infinite;
           animation: animate_ripple 0.5s linear infinite;
 }
+
 .edit_mode .note {
   pointer-events: none;
 }
+
 .edit_mode .edit_modal_wrapper {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
   display: flex !important;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+a, button {
+  text-decoration: none;
+  border: none;
+}
+/*# sourceMappingURL=styles.css.map */
