added: authentication while visting note page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -53,6 +53,7 @@ body{
 
 
 a,button{
-    text-decoration: none;
-    border:none;
+   text-decoration: none;
+   border:none;
+   cursor: pointer;
  }
