--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -5,6 +5,8 @@
     --border:1px solid hsl(0, 0%, 75%);
     --btn-clr:white;
     --note-title-border:1px solid hsl(10, 90%, 90%);
+    --hero-btn-clr:white;
+
 
 
 
@@ -32,6 +34,7 @@
     --border:1px solid hsl(0, 0%, 30%);
     --btn-clr:white;
     --note-title-border:1px solid hsl(10, 90%, 30%);
+    --hero-btn-clr:white;
 
 
 
