--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -4,6 +4,7 @@
   --border:1px solid hsl(0, 0%, 75%);
   --btn-clr:white;
   --note-title-border:1px solid hsl(10, 90%, 90%);
+  --hero-btn-clr:white;
   --body-bg:hsl(0, 0%, 97%);
   --header-bg:hsl(0, 0%, 100%);
   --input-bg:hsl(14, 90%, 100%);
@@ -23,6 +24,7 @@
   --border:1px solid hsl(0, 0%, 30%);
   --btn-clr:white;
   --note-title-border:1px solid hsl(10, 90%, 30%);
+  --hero-btn-clr:white;
   --body-bg:hsl(0, 0%, 6%);
   --header-bg:hsl(0, 0%, 10%);
   --input-bg:hsl(14, 90%, 10%);
@@ -107,5 +109,6 @@ body {
 a, button {
   text-decoration: none;
   border: none;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
