added: editModal appearance added: color theme with loca storage

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -56,4 +56,6 @@ a,button{
    text-decoration: none;
    border:none;
    cursor: pointer;
+   background: inherit;
+   font-size: clamp(1.6rem, 1.7rem, 1.7vw);
  }
