--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -21,6 +21,8 @@
     --modal-bg:white;
     --save-btn-bg:hsl(120, 100%, 20%);
     --delete-btn-bg:red;
+    --note-create-btn-bg:green;
+    --note-bg:hsl(0, 0%, 100%);
 
 
     // vars
@@ -31,7 +33,7 @@
     // font-clrs
     --prm-clr:hsl(10, 90%, 95%);
     --secondary-clr:hsl(9, 89%, 50%);
-    --border:1px solid hsl(0, 0%, 30%);
+    --border:1px solid hsl(0, 0%, 10%);
     --btn-clr:white;
     --note-title-border:1px solid hsl(10, 90%, 30%);
     --hero-btn-clr:white;
@@ -39,16 +41,17 @@
 
 
     // bg-clrs
-    --body-bg:hsl(0, 0%, 6%);
+    --body-bg:hsl(0, 0%, 5%);
     --header-bg:hsl(0, 0%, 10%);
-    --input-bg:hsl(14, 90%, 10%);
+    --input-bg:hsl(0, 0%, 10%);
     --form-bg:hsl(0, 0%, 10%);
-    --focused:hsl(10, 90%, 90%);
+    --focused:hsl(0, 0%, 0%);
     --btn-hover-bg:hsl(120, 100%, 20%);
     --edit-modal-bg:rgba(0,0,0, 0.5);
-    --modal-bg:white;
+    --modal-bg:hsl(0, 0%, 10%);
     --save-btn-bg:hsl(120, 100%, 20%);
     --delete-btn-bg:red;
+    --note-bg:hsl(0, 0%, 10%);
 
 
     // vars
