--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -15,26 +15,29 @@
   --modal-bg:white;
   --save-btn-bg:hsl(120, 100%, 20%);
   --delete-btn-bg:red;
+  --note-create-btn-bg:green;
+  --note-bg:hsl(0, 0%, 100%);
   --width:35rem;
 }
 
 .dark-theme {
   --prm-clr:hsl(10, 90%, 95%);
   --secondary-clr:hsl(9, 89%, 50%);
-  --border:1px solid hsl(0, 0%, 30%);
+  --border:1px solid hsl(0, 0%, 10%);
   --btn-clr:white;
   --note-title-border:1px solid hsl(10, 90%, 30%);
   --hero-btn-clr:white;
-  --body-bg:hsl(0, 0%, 6%);
+  --body-bg:hsl(0, 0%, 5%);
   --header-bg:hsl(0, 0%, 10%);
-  --input-bg:hsl(14, 90%, 10%);
+  --input-bg:hsl(0, 0%, 10%);
   --form-bg:hsl(0, 0%, 10%);
-  --focused:hsl(10, 90%, 90%);
+  --focused:hsl(0, 0%, 0%);
   --btn-hover-bg:hsl(120, 100%, 20%);
   --edit-modal-bg:rgba(0,0,0, 0.5);
-  --modal-bg:white;
+  --modal-bg:hsl(0, 0%, 10%);
   --save-btn-bg:hsl(120, 100%, 20%);
   --delete-btn-bg:red;
+  --note-bg:hsl(0, 0%, 10%);
   --width:35rem;
 }
 
@@ -110,5 +113,7 @@ a, button {
   text-decoration: none;
   border: none;
   cursor: pointer;
+  background: inherit;
+  font-size: clamp(1.6rem, 1.7rem, 1.7vw);
 }
 /*# sourceMappingURL=styles.css.map */
