--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -5,6 +5,7 @@
     --border:1px solid hsl(0, 0%, 75%);
     --btn-clr:black;
     --hero-btn-clr:white;
+    --transform-label-clr:hsl(9, 89%, 50%);
 
 
     // borders
@@ -17,7 +18,7 @@
     --header-bg:hsl(0, 0%, 100%);
     --input-bg:hsl(14, 90%, 100%);
     --form-bg:white;
-    --focused:hsl(0, 0%, 90%);
+    --focused:hsl(0, 0%, 95%);
     --btn-hover-bg:hsl(120, 100%, 20%);
     --edit-modal-bg:rgba(0,0,0, 0.5);
     --modal-bg:white;
@@ -48,7 +49,7 @@
     --header-bg:hsl(0, 0%, 8%);
     --input-bg:hsl(0, 0%, 8%);
     --form-bg:hsl(0, 0%, 10%);
-    --focused:hsl(0, 0%, 0%);
+    --focused:hsl(0, 0%, 5%);
     --btn-hover-bg:hsl(120, 100%, 20%);
     --edit-modal-bg:rgba(0,0,0, 0.5);
     --modal-bg:hsl(0, 0%, 10%);
