--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -4,13 +4,14 @@
   --border:1px solid hsl(0, 0%, 75%);
   --btn-clr:black;
   --hero-btn-clr:white;
+  --transform-label-clr:hsl(9, 89%, 50%);
   --note-border:1px solid rgba(0,0, 0, 0.1);
   --note-title-border:1px solid hsl(0, 0%, 85%);
   --body-bg:hsl(0, 0%, 96%);
   --header-bg:hsl(0, 0%, 100%);
   --input-bg:hsl(14, 90%, 100%);
   --form-bg:white;
-  --focused:hsl(0, 0%, 90%);
+  --focused:hsl(0, 0%, 95%);
   --btn-hover-bg:hsl(120, 100%, 20%);
   --edit-modal-bg:rgba(0,0,0, 0.5);
   --modal-bg:white;
@@ -33,7 +34,7 @@
   --header-bg:hsl(0, 0%, 8%);
   --input-bg:hsl(0, 0%, 8%);
   --form-bg:hsl(0, 0%, 10%);
-  --focused:hsl(0, 0%, 0%);
+  --focused:hsl(0, 0%, 5%);
   --btn-hover-bg:hsl(120, 100%, 20%);
   --edit-modal-bg:rgba(0,0,0, 0.5);
   --modal-bg:hsl(0, 0%, 10%);
@@ -68,6 +69,10 @@ html {
 
 body {
   background: var(--body-bg);
+}
+
+.error {
+  color: red;
 }
 
 .edit_mode {
