--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -30,17 +30,17 @@
   --hero-btn-clr:white;
   --note-border:1px solid rgba(255, 255, 255, 0);
   --note-title-border:1px solid hsl(0, 0%, 15%);
-  --body-bg:hsl(0, 0%, 5%);
-  --header-bg:hsl(0, 0%, 8%);
-  --input-bg:hsl(0, 0%, 8%);
-  --form-bg:hsl(0, 0%, 8%);
+  --body-bg:hsl(195, 12%, 7%);
+  --header-bg:hsl(195, 20%, 4%);
+  --input-bg:hsl(195, 20%, 4%);
+  --form-bg:hsl(0, 0%, 10%);
   --focused:hsl(0, 0%, 5%);
   --btn-hover-bg:hsl(120, 100%, 20%);
   --edit-modal-bg:rgba(0,0,0, 0.5);
   --modal-bg:hsl(0, 0%, 10%);
   --save-btn-bg:hsl(120, 100%, 20%);
   --delete-btn-bg:red;
-  --note-bg:hsl(0, 0%, 10%);
+  --note-bg:rgb(8, 11, 12);
   --width:35rem;
 }
 
