--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -25,14 +25,14 @@
 .dark-theme {
   --prm-clr:hsl(10, 90%, 95%);
   --secondary-clr:hsl(9, 89%, 50%);
-  --border:1px solid hsl(0, 0%, 10%);
+  --border:1px solid hsl(0, 0%, 15%);
   --btn-clr:white;
   --hero-btn-clr:white;
   --note-border:1px solid rgba(255, 255, 255, 0);
   --note-title-border:1px solid hsl(0, 0%, 15%);
-  --body-bg:hsl(195, 12%, 7%);
-  --header-bg:hsl(195, 20%, 4%);
-  --input-bg:hsl(195, 20%, 4%);
+  --body-bg:hsl(210, 5%, 10%);
+  --header-bg:hsl(210, 5%, 6%);
+  --input-bg:hsl(210, 5%, 6%);
   --form-bg:hsl(0, 0%, 10%);
   --focused:hsl(0, 0%, 5%);
   --btn-hover-bg:hsl(120, 100%, 20%);
@@ -40,7 +40,7 @@
   --modal-bg:hsl(0, 0%, 10%);
   --save-btn-bg:hsl(120, 100%, 20%);
   --delete-btn-bg:red;
-  --note-bg:rgb(8, 11, 12);
+  --note-bg:hsl(195, 20%, 4%);
   --width:35rem;
 }
 
@@ -61,6 +61,7 @@
           box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--prm-clr);
+  letter-spacing: 1.5;
 }
 
 html {
