--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:var(--prm-clr);
+    letter-spacing: 1.5;
 }
 
 html{
