--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -45,21 +45,17 @@
     --note-title-border:1px solid hsl(0, 0%, 15%);
 
     // bg-clrs
-    --body-bg:hsl(210, 5%, 10%);
-    --header-bg:hsl(210, 5%, 6%);
-    // --body-bg:hsl(195, 12%, 7%);
-    // --header-bg:hsl(195, 20%, 4%);
-    // --input-bg:hsl(195, 20%, 4%);
-    --input-bg:hsl(210, 5%, 6%);
-    --form-bg:hsl(0, 0%, 10%);
+    --body-bg:hsl(210, 8%, 5%);
+    --header-bg:hsl(210, 8%, 10%);
+    --input-bg:hsl(210, 8%, 8%);
+    --form-bg:hsl(210, 8%, 10%);
     --focused:hsl(0, 0%, 5%);
     --btn-hover-bg:hsl(120, 100%, 20%);
     --edit-modal-bg:rgba(0,0,0, 0.5);
     --modal-bg:hsl(0, 0%, 10%);
     --save-btn-bg:hsl(120, 100%, 20%);
-    --delete-btn-bg:red;
-    // --note-bg:#181a1b;
-    --note-bg:hsl(195, 20%, 4%);
+    --delete-btn-bg:rgb(224, 12, 12);
+    --note-bg:#04080d;
 
 
     // vars
