added: escape key event for saving notes added: useEventListener for listening the escape key for saving the notes while the note edit modal is opened and contentes are changed added: fix for not being removed the events or adding the key events every time when the component rerender

--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -3,6 +3,7 @@
     --prm-clr:hsl(10, 90%, 10%);
     --secondary-clr:hsl(9, 89%, 50%);
     --border:1px solid hsl(0, 0%, 75%);
+    // --border:1px solid hsl(9, 100%, 90%);
     --btn-clr:black;
     --hero-btn-clr:white;
     --transform-label-clr:hsl(9, 89%, 50%);
@@ -27,6 +28,7 @@
     --note-create-btn-bg:green;
     --note-bg:hsl(0, 0%, 100%);
 
+    --tooltip-bg:hsl(9, 89%, 50%);
 
     // vars
     --width:35rem;
@@ -37,6 +39,7 @@
     --prm-clr:hsl(10, 90%, 95%);
     --secondary-clr:hsl(9, 89%, 50%);
     --border:1px solid hsl(0, 0%, 15%);
+    // --border:1px solid hsl(10, 42%, 11%);
     --btn-clr:white;
     --hero-btn-clr:white;
 
