--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,7 +7,8 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:var(--prm-clr);
-    letter-spacing: 1.5;
+    line-height: 1.5;
+    transition: background 0.3s;
 }
 
 html{
@@ -18,6 +19,9 @@ body{
     background:var(--body-bg);
 }
 
+.accent{
+   color:var(--secondary-clr);
+}
 
 .error{
    color:red;
