--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --prm-clr:hsl(10, 10%, 15%);
+  --prm-clr:hsl(0, 0%, 22%);
   --secondary-clr:hsl(10, 90%, 50%);
   --border:1px solid hsl(0, 0%, 75%);
   --btn-clr:black;
@@ -25,7 +25,7 @@
 }
 
 .dark-theme {
-  --prm-clr:hsl(0, 0%, 85%);
+  --prm-clr:hsl(0, 0%, 80%);
   --secondary-clr:hsl(9, 89%, 50%);
   --border:1px solid hsl(0, 0%, 15%);
   --btn-clr:white;
@@ -71,6 +71,7 @@
   line-height: 1.5;
   -webkit-transition: background 0.3s;
   transition: background 0.3s;
+  letter-spacing: 0.07rem;
 }
 
 html {
@@ -140,6 +141,7 @@ a, button {
   cursor: pointer;
   background: inherit;
   font-size: clamp(1.6rem, 1.7rem, 1.7vw);
+  font-weight: 500;
 }
 
 @-webkit-keyframes show {
@@ -165,6 +167,92 @@ a, button {
   }
   100% {
     opacity: 0;
+  }
+}
+
+.hero > * {
+  -webkit-animation: animateLoad calc(1.3s + (0.2s  * var(--order))) ease-in forwards;
+          animation: animateLoad calc(1.3s + (0.2s  * var(--order))) ease-in forwards;
+}
+
+@-webkit-keyframes animateLoad {
+  0% {
+    -webkit-transform: rotate(15deg) translateY(300%) scale(0.9);
+            transform: rotate(15deg) translateY(300%) scale(0.9);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: rotate(0) translateY(-50%) scale(1.1);
+            transform: rotate(0) translateY(-50%) scale(1.1);
+  }
+  100% {
+  }
+}
+
+@keyframes animateLoad {
+  0% {
+    -webkit-transform: rotate(15deg) translateY(300%) scale(0.9);
+            transform: rotate(15deg) translateY(300%) scale(0.9);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: rotate(0) translateY(-50%) scale(1.1);
+            transform: rotate(0) translateY(-50%) scale(1.1);
+  }
+  100% {
+  }
+}
+
+.note {
+  -webkit-animation: animate_note 0.3s;
+          animation: animate_note 0.3s;
+}
+
+@-webkit-keyframes animate_note {
+  0% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+    background: var(--secondary-clr);
+  }
+  50% {
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 1;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes animate_note {
+  0% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+    background: var(--secondary-clr);
+  }
+  50% {
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 1;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 /*# sourceMappingURL=styles.css.map */
