added: overlay component for hiding the opened nav added: overlay component in header component added: useEffect for showing and hiding the Overlay component using class toggle in the useMediaQuery hook

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -144,6 +144,16 @@ a, button {
   font-weight: 500;
 }
 
+html ::-moz-selection {
+  background: var(--secondary-clr);
+  color: #e8e8e8;
+}
+
+html ::selection {
+  background: var(--secondary-clr);
+  color: #e8e8e8;
+}
+
 @-webkit-keyframes show {
   0% {
     opacity: 0;
@@ -201,5 +211,9 @@ a, button {
   }
   100% {
   }
+}
+
+.show_overlay {
+  display: block !important;
 }
 /*# sourceMappingURL=styles.css.map */
