--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -22,6 +22,7 @@
   --tooltip-bg:hsl(9, 89%, 50%);
   --input-hover-bg:hsl(10, 100%, 96%);
   --width:35rem;
+  --header-height:6rem;
 }
 
 .dark-theme {
