--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -1,6 +1,6 @@
 :root{
     // font-clrs
-    --prm-clr:hsl(10, 90%, 15%);
+    --prm-clr:hsl(10, 29%, 15%);
     --secondary-clr:hsl(10, 90%, 50%);
     --border:1px solid hsl(0, 0%, 80%);
     --btn-clr:black;
@@ -16,7 +16,8 @@
     // bg-clrs
     --body-bg:hsl(0, 0%, 95%);
     --header-bg:hsl(0, 0%, 100%);
-    --input-bg:hsl(14, 90%, 100%);
+    --input-bg:hsl(0, 0%, 100%);
+    --login-input-bg:hsl(0, 0%, 95%);
     --form-bg:white;
     --focused:hsl(0, 0%, 95%);
     --btn-hover-bg:hsl(120, 100%, 20%);
@@ -37,7 +38,7 @@
 
 .dark-theme{
     // font-clrs
-    --prm-clr:hsl(0, 0%, 80%);
+    --prm-clr:hsl(0, 0%, 90%);
     --secondary-clr:hsl(9, 89%, 50%);
     --border:1px solid hsl(0, 0%, 15%);
     --btn-clr:white;
@@ -50,7 +51,8 @@
     // bg-clrs
     --body-bg:hsl(210, 8%, 8%);
     --header-bg:hsl(210, 8%, 12%);
-    --input-bg:hsl(210, 8%, 12%);
+    --input-bg:hsl(210, 8%, 5%);
+    --login-input-bg:hsl(0, 0%, 5%);
     --form-bg:hsl(210, 8%, 10%);
     --focused:hsl(0, 0%, 5%);
     --btn-hover-bg:hsl(120, 100%, 20%);
