--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -14,8 +14,10 @@
 
 
     // bg-clrs
-    --body-bg:hsl(0, 0%, 95%);
-    --header-bg:hsl(0, 0%, 100%);
+    // --body-bg:hsl(0, 0%, 95%);
+    // --header-bg:hsl(0, 0%, 100%);
+    --body-bg:linear-gradient(140deg, hsl(0, 0%, 90%), hsl(0, 0%, 100%));
+    --header-bg:linear-gradient(140deg , hsl(0, 0%, 100%), hsl(0, 0%, 90%));
     --input-bg:hsl(0, 0%, 100%);
     --login-input-bg:hsl(0, 0%, 95%);
     --form-bg:white;
@@ -49,8 +51,10 @@
     --note-title-border:1px solid hsl(0, 0%, 15%);
 
     // bg-clrs
-    --body-bg:hsl(210, 8%, 8%);
-    --header-bg:hsl(210, 8%, 12%);
+    --body-bg:linear-gradient(140deg, hsl(210, 8%, 8%), hsl(210, 8%, 12%));
+    --header-bg:linear-gradient(140deg , hsl(210, 8%, 12%), hsl(210, 8%, 5%));
+    // --body-bg:hsl(210, 8%, 8%);
+    // --header-bg:hsl(210, 8%, 12%);
     --input-bg:hsl(210, 8%, 5%);
     --login-input-bg:hsl(0, 0%, 5%);
     --form-bg:hsl(210, 8%, 10%);
