--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,22 +1,22 @@
 @import "./color";
 
-
 *{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:var(--prm-clr);
-    line-height: 1.5;
-    transition: background 0.3s;
-    letter-spacing: 0.07rem;
+   padding:0;
+   margin:0;
+   box-sizing: border-box;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   color:var(--prm-clr);
+   line-height: 1.5;
+   transition: background 0.3s;
+   letter-spacing: 0.07rem;
+   font-weight: var(--weight) !important;
 }
 
 html{
     font-size: 62.5%;
 }
 html, #root, main{
-   height:100%;
+   min-height:100%;
 }
 
 body{
