feature: when user changes the color of the note by clicking the color_menu, if the color of the note the the color_box are same then no server request will go to the server

--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -81,6 +81,6 @@
         filter:invert(0.3);
     }
     .note{
-        box-shadow: none;
+        box-shadow: 0 0.4rem 0.4rem rgba(54, 54, 54, 0.1);
     }
 }
