--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -61,8 +61,8 @@
 }
 
 .dark-theme .note {
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  -webkit-box-shadow: 0 0.4rem 0.4rem rgba(54, 54, 54, 0.1);
+          box-shadow: 0 0.4rem 0.4rem rgba(54, 54, 54, 0.1);
 }
 
 * {
