--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -61,7 +61,7 @@ body{
     .edit_modal_wrapper{
        display: flex !important;
     }
- }
+}
 
 
 a,button{
@@ -79,36 +79,11 @@ html{
    }
 }
 
- @keyframes show {
-   0%{
-      opacity: 0;
-   }
-   20%{
-      opacity: 1;
-      z-index:10;
-   }
-   100%{
-      opacity: 0;
-   }
-}
-
 
 // animation of loading in hero
+// doing it here because hero_img is lossing the animation
 .hero > * {
    animation: animateLoad calc(1.3s + (0.2s  * var(--order))) ease-in forwards;
-}
-@keyframes animateLoad {
-   0%{
-      transform: rotate(15deg) translateY(300%) scale(0.9);
-      opacity: 0;
-   }
-   70%{
-      transform: rotate(0) translateY(-50%) scale(1.1);
-   }
-   100%{
-      // transform:rotate(0) translateY(0)
-      // opacity: unset;
-   }
 }
 
 .show_overlay{
