--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -73,6 +73,8 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--prm-clr);
   line-height: 1.5;
+  -webkit-transition: background 0.3s cubic-bezier(0.5, 1, 0.1, 1);
+  transition: background 0.3s cubic-bezier(0.5, 1, 0.1, 1);
   letter-spacing: 0.07rem;
   font-weight: var(--weight) !important;
 }
