--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,7 +7,7 @@
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color:var(--prm-clr);
    line-height: 1.5;
-   // transition: background 0.3s;
+   transition: background 0.3s cubic-bezier(0.5, 1, 0.1, 1);
    letter-spacing: 0.07rem;
    font-weight: var(--weight) !important;
 }
