--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -7,6 +7,8 @@
     --hero-btn-clr:white;
     --transform-label-clr:hsl(10, 90%, 50%);
 
+    --green:green;
+
 
     // borders
     --note-border:1px solid rgba(0,0, 0, 0.1);
@@ -14,8 +16,6 @@
 
 
     // bg-clrs
-    // --body-bg:hsl(0, 0%, 95%);
-    // --header-bg:hsl(0, 0%, 100%);
     --body-bg:linear-gradient(140deg, hsl(0, 0%, 90%), hsl(0, 0%, 100%));
     --header-bg:linear-gradient(140deg , hsl(0, 0%, 100%), hsl(0, 0%, 90%));
     --input-bg:hsl(0, 0%, 100%);
@@ -37,7 +37,7 @@
     --width:35rem;
     --header-height:6rem;
 
-    --weight: 600;
+    --weight: 500;
 }
 
 .dark-theme{
@@ -55,11 +55,8 @@
     // bg-clrs
     --body-bg:linear-gradient(140deg, hsl(210, 8%, 8%), hsl(210, 8%, 12%));
     --header-bg:linear-gradient(140deg , hsl(210, 8%, 12%), hsl(210, 8%, 5%));
-    // --body-bg:hsl(210, 8%, 8%);
-    // --header-bg:hsl(210, 8%, 12%);
     --input-bg:hsl(210, 8%, 5%);
-    --login-input-bg:hsl(0, 0%, 5%);
-    // --form-bg:hsl(210, 8%, 10%);
+    --login-input-bg:hsl(0, 9%, 7%);
     --form-bg:hsl(200, 10%, 15%);
     --focused:hsl(0, 0%, 5%);
     --btn-hover-bg:hsl(120, 100%, 20%);
