--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -21,7 +21,9 @@ html, #root, main{
 }
 
 body{
-    background:var(--body-bg);
+   background:var(--body-bg);
+   max-width: 220rem;
+   margin:auto;
 }
 
 .accent{
