--- a/client/src/styles/_color.scss
+++ b/client/src/styles/_color.scss
@@ -6,6 +6,8 @@
     --btn-clr:black;
     --hero-btn-clr:white;
     --transform-label-clr:hsl(10, 90%, 50%);
+    --focuse-outline:1px solid hsl(10, 93%, 45%);
+
 
     --green:green;
 
@@ -47,6 +49,7 @@
     --border:1px solid hsl(0, 0%, 15%);
     --btn-clr:white;
     --hero-btn-clr:white;
+    --focuse-outline:1px solid hsl(10, 93%, 24%);
 
     // borders
     --note-border:1px solid rgba(255, 255, 255, 0);
@@ -77,7 +80,5 @@
     .invert-3{
         filter:invert(0.3);
     }
-    .note{
-        box-shadow: 0 0.4rem 0.4rem rgba(54, 54, 54, 0.1);
-    }
+
 }
