--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 :root {
-  --prm-clr:hsl(10, 29%, 15%);
+  --prm-clr:hsl(214, 90%, 10%);
   --secondary-clr:hsl(214, 90%, 50%);
   --border:1px solid hsl(0, 0%, 85%);
   --btn-clr:black;
@@ -28,12 +27,12 @@
   --note-hover-shadow:0 0.2rem 1rem hsl(214, 48%, 80%);
   --width:35rem;
   --header-height:6rem;
-  --weight: 500;
+  --weight: 600;
 }
 
 .dark-theme {
-  --prm-clr:hsl(0, 0%, 90%);
-  --secondary-clr:hsl(214, 89%, 50%);
+  --prm-clr:hsl(214, 90%, 95%);
+  --secondary-clr:hsl(214, 90%, 50%);
   --border:1px solid hsl(0, 0%, 15%);
   --btn-clr:white;
   --hero-btn-clr:white;
@@ -77,7 +76,7 @@
   -webkit-transition: background 0.3s ease;
   transition: background 0.3s ease;
   letter-spacing: 0.07rem;
-  font-weight: var(--weight) !important;
+  font-weight: var(--weight);
 }
 
 html {
@@ -133,6 +132,10 @@ body {
           animation: animate_ripple 0.5s linear infinite;
 }
 
+.edit_mode header {
+  z-index: unset;
+}
+
 .edit_mode .note {
   pointer-events: none;
 }
@@ -174,5 +177,10 @@ html ::selection {
 .show_note_menu_overlay {
   background: rgba(0, 0, 0, 0.1) !important;
   display: block !important;
+}
+
+.active_link {
+  text-decoration: underline;
+  color: var(--secondary-clr);
 }
 /*# sourceMappingURL=styles.css.map */
